# gbs

./: .gitignore  .gitmodules  CMakeLists.txt  GBSCoreModulesConfig.cmake  GBSModuleConfigFunction.cmake  LICENSE.LGPLv3  News.md  ReadMe.md  main.cpp
bench/: .gitignore  APPROX_AUDIT.md  CMakeLists.txt  COMPARE_AUDIT.md  COMPILE_AUDIT.md  COVERAGE_AUDIT.md  INTERP_AUDIT.md  NURBS_AUDIT.md  PARALLEL_AUDIT.md  REPORT.md  bench_approx.cpp  bench_arc_length_derivatives.cpp  bench_compare_occt.cpp  bench_eval_compare.cpp  bench_interp.cpp  bench_loft.cpp  bench_parallel.cpp  results_compare_occt.txt
bench/python/: README.md  _harness.py  compare_build.py  compare_curve.py  results_build.md  results_curve.md
cmake/: GbsConfig.cmake.in  GbsConfigVersion.cmake.in
data/: crv_bs.json
docs/: CMakeLists.txt  Doxyfile  conf.py  index.rst
docs/sources/theory/: continuity.ipynb  foils_param.ipynb  gordon.ipynb  loft.ipynb
gbs/: basisfunctions.h  basisfunctions.ixx  bscanalysis.h  bscapprox.h  bscbuild.h  bscinterp.h  bscshaping.h  bsctools.h  bscurve.h  bssanalysis.h  bssapprox.h  bssbuild.h  bssinterp.h  bssshaping.h  bsstools.h  bssurf.h  curveReversed.h  curvecircle.h  curvecomposite.h  curveextended.h  curveline.h  curveoffset.h  curveonsurface.h  curvereparametrized.h  curves  curvescheck.h  curvetrimmed.h  (+21 more)
gbs-core/: CMakeLists.txt  gbsConfig.cmake.in
gbs-core/include/gbs/: basisfunctions.h  bscanalysis.h  bscapprox.h  bscinterp.h  bsctools.h  bscurve.h  bssanalysis.h  bssapprox.h  bsstools.h  curveoffset.h  curveonsurface.h  exceptions.h  gbslib.h  knotsfunctions.h  offsets.h  surfaceoffset.h  surfaceofrevolution.h  surfaces
gbs-cuda/: CMakeLists.txt  basisfunctions.cuh
gbs-cuda/tests/: CMakeLists.txt  tests_cudabasisfunction.cu
gbs-io/: CMakeLists.txt  fromJson2.h  fromjson.h  fromjson2.h  fromtext.h  gbs-ioConfig.cmake.in  iges.h  print.h  tojson.h
gbs-io/include/gbs/io/: fromjson.h  fromtext.h  tojson.h
gbs-mesh/: CMakeLists.txt  gbs-meshConfig.cmake.in  halfedgemesh.h  mshedge.h  smoothing.h  tfi.h  types.h
gbs-mesh/include/gbs/mesh/: smoothing.h  tfi.h
gbs-mesh/tests/: CMakeLists.txt  tests_halfedgemesh_host.cpp  tests_halthedgemesh.cu
gbs-occt/: CMakeLists.txt  brepbuilders.h  containers.h  curvesbuild.cpp  curvesbuild.h  discetize.h  export.h  funtionsforsolver.cpp  gbs-occtConfig.cmake.in  intersections.cpp  measure.cpp  surfacesbuild.cpp  surfacesbuild.h
gbs-occt/include/gbs/occt/: brepbuilders.h  containers.h  curvesbuild.h  discetize.h  funtionsforsolver.h  geomprim.h  measure.h  surfacesbuild.h
gbs-occt/src/: curvesbuild.cpp  funtionsforsolver.cpp  intersections.cpp  measure.cpp  surfacesbuild.cpp
gbs-occt/tests/: CMakeLists.txt  tests_curvesbuild.cpp  tests_functionsforsolver.cpp  tests_geomprim.cpp  tests_intersections.cpp  tests_main.cpp.hide  tests_surfbuild.cpp
gbs-render/: CMakeLists.txt  gbs-renderConfig.cmake.in  vtkGbsRender.h  vtkSurfaceRender.h  vtkcurvesrender.cpp  vtkcurvesrender.h  vtkfunctionrender.h  vtkgridrender.h
gbs-render/examples/: CMakeLists.txt  vtk_interaction.cpp  vtk_render.cpp
gbs-render/include/gbs/render/: vtkgridrender.h
gbs-render/src/: vtkcurvesrender.cpp
gbs-render/tests/: CMakeLists.txt  tests_vtk_render.cpp  tests_vtkexamples.cpp
occt-utils/: CMakeLists.txt  containers.h  curvesbuild.cpp  discetize.h  funtionsforsolver.cpp  geomprim.h  intersections.cpp  measure.cpp
occt-utils/occt-utils/: brepbuilders.h  curvesbuild.h  intersections.h  surfacesbuild.cpp  surfacesbuild.h
occt-utils/tests/: CMakeLists.txt  tests_curvesbuild.cpp  tests_functionsforsolver.cpp  tests_geomprim.cpp  tests_intersections.cpp  tests_surfbuild.cpp
python/: CMakeLists.txt  MANIFEST  __init__.py  bsCurveEditor.py  gbsBindBuildSurfaces.cpp  gbsBindBuildSurfaces.h  gbsBindCurveTools.cpp  gbsBindCurveTools.h  gbsBindCurves.cpp  gbsBindCurves.h  gbsBindDiscretize.cpp  gbsBindDiscretize.h  gbsBindInterpCurve.h  gbsBindInterpSurface.h  gbsBindShaping.cpp  gbsBindShaping.h  gbsBindSurfaceTools.cpp  gbsBindSurfaceTools.h  gbsBindSurfaces.cpp  gbsBindSurfaces.h  gbsbind.cpp  gbsbindapprox.cpp  gbsbindapprox.h  gbsbindbuildcurve.cpp  gbsbindbuildcurve.h  gbsbindextrema.h  gbsbindinterp.cpp  gbsbindmesh.cpp  gbsbindrender.cpp  np_points.h  plotlyplot.py  pybind_interp.cpp  repr.h  setup.cfg  vistaplot.py
python/pygbs/: _version.py
python/src/: gbsbind.cpp  gbsbindinterp.cpp  gbsbindmesh.cpp  gbsbindrender.cpp  vistaplot.py  vtk_bind.h  vtkplot.py
python/tests/: conftest.py  test_BSCFunction.py  test_BSCinterp.py  test_BSCurve.py  test_BSCurveTools.py  test_BSSurface.py  test_CurveOnSurface.py  test_json.py  test_mesh.py  test_shaping.py
python/tests/in/: prop3.json
render/: CMakeLists.txt  stiple.geom  stiple_dec.frag  stiple_impl.frag  vtkcurvesrender.cpp  vtkcurvesrender.h
render/tests/: CMakeLists.txt  tests_vtk_render.cpp
tests/: CMakeLists.txt  doctest_gtest.hpp  tests_approx.cpp  tests_baseIntersections.cpp  tests_basisfunctions.cpp  tests_batch_build.cpp  tests_bscanalysis.cpp  tests_bscapprox.cpp  tests_bscbuild.cpp  tests_bsctools.cpp  tests_bscurve.cpp  tests_bsinterp.cpp  tests_bssanalysis.cpp  tests_bssbuild.cpp  tests_bssurf.cpp  tests_bssurftools.cpp  tests_checkcurves.cpp  tests_curve_derivatives.cpp  tests_curves.cpp  tests_curves_shapping.cpp  tests_extrema.cpp  tests_foils.cpp  tests_halfedgemesh.cpp  tests_helpers.h  tests_knotsfunctions.cpp  tests_main.cpp  tests_maths.cpp  tests_mesh.cpp  tests_mesh_delauney2d.cpp  tests_nlopt_example.cpp  tests_offset.cpp  tests_oi.cpp  tests_openmesh.cpp  tests_parallel_eval.cpp  tests_solvers.cpp  tests_sundials.cpp  tests_surface_derivatives.cpp  tests_surfaceoffset.cpp  tests_surfaces.cpp  tests_surfaces_shapping.cpp  (+6 more)
tests/in/: bscurve_direct_mults.json  prop3.json  test_channel_solve_cax.json  test_channel_solve_roue_ax.json  test_channel_solve_roue_ct.json
tests/third_parties/: tests_nlopt_example.cpp  tests_sundials.cpp
tests_3rdlibs/: CMakeLists.txt  tests_nlopt_example.cpp  tests_openmesh.cpp  tests_sundials.cpp  tests_sundials_examples.cpp
(+62 files in other folders)
